--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ashford International University</title>
-  <link rel="stylesheet" href="styles/main.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ashford International University</title>
+
+    <!-- Redirect script for GitHub Pages -->
+    <script>
+      (function(location) {
+        if (location.search) {
+          var q = {};
+          location.search
+            .slice(1)
+            .split("&")
+            .forEach(function(v) {
+              var a = v.split("=");
+              q[a[0]] = a.slice(1).join("=").replace(/~and~/g, "&");
+            });
+          if (q.p !== undefined) {
+            sessionStorage.redirect = q.p + (q.q ? "?" + q.q : "") + location.hash;
+            location.href = location.pathname;
+          }
+        }
+      })(window.location);
+    </script>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  <nav id="navbar"></nav>
-  <header id="hero-section"></header>
-  <main>
-    <section id="mission-vision"></section>
-    <section id="brief-description"></section>
-    <section id="carousel"></section>
-    <section id="quick-links"></section>
-  </main>
-  <footer id="footer"></footer>
-  <script src="main.js"></script>
-</body>
+  </body>
 </html>
